切片说明内容修改

--- a/daily/2020-03-12.md
+++ b/daily/2020-03-12.md
@@ -45,4 +45,4 @@ False
 >>> print(list[1::2])
 [2, 4, 6]
 ```
-- 切片说明：list[start:end:len]，start表示切片开始的位置(第一个为0)；end表示结束位置，len表示切片长度
+- 切片说明：`list[start:end:step]`，start表示切片开始的位置(第一个为0)；end表示结束位置，step表示切片长度
