--- a/daily/2020-03-22.md
+++ b/daily/2020-03-22.md
@@ -7,7 +7,7 @@ windows python环境配置
 
 1.开启windows子系统功能
 
-![avatar](./images/03-22-01.png)
+![](./images/03-22-01.png)
 
 2.在微软应用中下载Ubuntu和windows Terminal
 - 在应用中搜索“wsl”，点击选择“Ubuntu”
