--- a/daily/2020-03-22.md
+++ b/daily/2020-03-22.md
@@ -1,13 +1,13 @@
-windows python环境配置
-基本思路：利用window10 wsl(https://docs.microsoft.com/zh-cn/windows/wsl/about)功能创建Ubuntu虚拟机，在虚拟机中配置python venv环境
-使用的工具：
-- windows 10
-- windows Terminal
-- VS Code
+### windows python环境配置
+- 基本思路：利用window10 wsl(https://docs.microsoft.com/zh-cn/windows/wsl/about)功能创建Ubuntu虚拟机，在虚拟机中配置python venv环境
+- 使用的工具：
+    - windows 10
+    - windows Terminal
+    - VS Code
 
 1.开启windows子系统功能
 
-![](./images/03-22-01.png)
+![avatar](./images/03-22-01.png)
 
 2.在微软应用中下载Ubuntu和windows Terminal
 - 在应用中搜索“wsl”，点击选择“Ubuntu”
