--- a/IDO/面试/基础问答.md
+++ b/IDO/面试/基础问答.md
@@ -33,8 +33,10 @@
 - 严重级别：
     - 导致功能完全无法使用的
     - 数据处理错误的
+    - 数据展示错误的
 - 一般级别：
-    - 页面显示错误
+    - 页面文字、图片显示错误
+    - 页面样式展示错误、错位
     - 与原型图有差异的
 - 优化：
     - 页面交互优化
