--- a/IDO/面试/接口测试.md
+++ b/IDO/面试/接口测试.md
@@ -49,7 +49,27 @@
 - 登录接口测试
 - Mock接口
 
+7. 为什么做接口测试
+- 尽早发现问题
+- 能发现功能测试阶段无法发现的问题
+- 越早发现问题修复成本越低
 
+8. 接口测试能发现哪些问题
+- 可以发现在页面操作不能发现的问题
+- 检测系统的异常处理能力
+- 可以测试并发情况
+- 可以修改请求参数，突破前端页面输入限制
+
+9. 怎么进行的接口测试
+- 正常场景
+- 参数组合，必传项和非必传项随意组合
+- 异常验证
+    - 必传项为空
+    - 输入内容的类型
+    - 长度等
+- 性能
+    - 并发
+    - 响应时间
 
 
 
